styles.css
/* ... */
.the-hovering{
    animation-duration: 5s;
    animation-name: picIncrease;
    animation-iteration-count: infinite;
    position:absolute;

}

@keyframes picIncrease {
  from {
    margin-top: 1rem;
  }

  50%{
    margin-top: 2rem;
  }


  to {

    margin-top: 1rem;
  }
}
/*# sourceMappingURL=bootstrap.min.css.map */

.top-buttons{
  width = 100%;
  display: flex;
  margin-left: 31.5%;
  margin-right: 31.5%;
}

.top-buttons-two{
  font-size: 3vw;
}

.btn-lg{
  width: 100vw;
}

.linkedin-button{
  display: inline-flex;
  width: 18vw;
}
.github-button{
  display: inline-flex;
  width: 18vw;

}

